--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite Money Blog</title>
+    <!-- Favicon for Browsers -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+
+<!-- Favicon for Apple Devices -->
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+<!-- Web App Manifest (For Android) -->
+<link rel="manifest" href="site.webmanifest">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         
